# chaining-gnn-graph-alignment

./: README.md  baselines_faq.py  commander.py  commander_nl.py  faq_speed.py  ind_inference.py  inference.py  inference_streaming.py  pyproject.toml  streaming.py
conf/: config.yaml  streaming.yaml
conf/dataset/: dense.yaml  large.yaml  regular.yaml  small.yaml  sparse.yaml
conf/hydra/run/: mac.yaml
conf/model/: fgnn.yaml
conf/pipeline/: chain_noseed.yaml
conf/training/: gpu.yaml  stream.yaml
loaders/: __init__.py  data_generator.py  load_utils.py
models/: __init__.py  block_net.py  layers.py  loss.py  pipeline.py  pipeline_nl.py  pl_model.py  pl_model_nl.py
toolbox/: baselines.py  metrics.py  utils.py
