[project]
name = "chaining-gnn-graph-alignment"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3.2",
    "more-itertools>=10.8.0",
    "numpy>=2.3.3",
    "omegaconf>=2.3.0",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "pytorch-lightning>=2.5.5",
    "scipy>=1.16.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
